--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: '1.0'
 
 services:
   backend:
@@ -6,8 +6,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     
-    env_file:
-      - .env
+    # env_file:
+    #   - .env
     
     # or 
     # environment:
