add google mirror

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@ user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
+load_module /etc/nginx/soruceCode/nginx-1.18.0/objs/ngx_http_google_filter_module.so;
 
 events {
 	worker_connections 768;
@@ -61,38 +62,7 @@ http {
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
 
-	# map $http_upgrade $connection_upgrade {
-    #              default upgrade;
-    #              '' close;
-    #              }
-
-	# server {
-    # 		listen 80;
-    # 		listen [::]:80;
-    # 		server_name www.letsthink.top letsthink.top;
-	# 		root /home/yahaha/think/frontend;   ## 网站编译好的文件地址
-
-	# 	## 网站路由​
-	# 	location /Examples/ {
- 	# 		 alias /home/yahaha/think/frontend/;
-  	# 		try_files $uri $uri/ /index.html;
-	# 	}
-
-	# 	## websocket api
-	# 	location /ws/socket.io {
-	# 		proxy_pass http://172.190.79.138:8000;
-	# 		proxy_http_version 1.1;
-	# 		proxy_read_timeout 60s;
-   	# 		proxy_send_timeout 60s;
-	# 		proxy_set_header Upgrade $http_upgrade;
-	# 		proxy_set_header Connection "Upgrade";
-	# 		proxy_set_header Host $host;
-	# 		proxy_set_header Sec-WebSocket-Version 13;
-	# 		proxy_set_header Sec-WebSocket-Key $http_sec_websocket_key;
-	# 	}
-
-	# }
-
+	
 	server {
 		listen 80;
 		listen [::]:80;
@@ -100,6 +70,47 @@ http {
 
 		# 自动重定向HTTP到HTTPS
 		return 301 https://$host$request_uri;
+	}
+
+	server {
+		listen 443 ssl http2;
+		listen [::]:443 ssl http2;
+		server_name www.search.letsthink.top search.letsthink.top;
+
+		ssl_certificate /home/yahaha/think/ssl/search/search.letsthink.top_bundle.crt;  # 替换为SSL证书路径
+		ssl_certificate_key /home/yahaha/think/ssl/search/search.letsthink.top.key;  # 替换为SSL证书私钥路径
+
+		ssl_session_timeout 10m;
+		#请按照以下协议配置
+		ssl_protocols TLSv1.2 TLSv1.3; 
+		#请按照以下套件配置，配置加密套件，写法遵循 openssl 标准。
+		ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE; 
+		ssl_prefer_server_ciphers on;
+
+		# logging
+		access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
+		error_log /var/log/nginx/error.log warn;
+
+		
+		resolver 8.8.8.8;
+
+		# 防止网络爬虫
+		#forbid spider
+		if ($http_user_agent ~* "qihoobot|Baiduspider|Googlebot|Googlebot-Mobile|Googlebot-Image|Mediapartners-Google|Adsbot-Google|Feedfetcher-Google|Yahoo! Slurp|Yahoo! Slurp China|YoudaoBot|Sosospider|Sogou spider|Sogou web spider|MSNBot|ia_archiver|Tomato Bot") 
+		{ 
+			return 403; 
+		}
+
+		# 禁止用其他域名或直接用IP访问，只允许指定的域名
+		#forbid illegal domain
+		if ( $host != "search.letsthink.top" ) {
+			return 403; 
+		}
+
+		location / {						
+			google on;
+			google_scholar on;			
+		}
 	}
 
 	server {
@@ -122,6 +133,19 @@ http {
 		error_log /var/log/nginx/error.log warn;
 
 		root /home/yahaha/think/frontend;   ## 网站编译好的文件地址
+
+		# 防止网络爬虫
+		#forbid spider
+		if ($http_user_agent ~* "qihoobot|Baiduspider|Googlebot|Googlebot-Mobile|Googlebot-Image|Mediapartners-Google|Adsbot-Google|Feedfetcher-Google|Yahoo! Slurp|Yahoo! Slurp China|YoudaoBot|Sosospider|Sogou spider|Sogou web spider|MSNBot|ia_archiver|Tomato Bot") 
+		{ 
+			return 403; 
+		}
+
+		# 禁止用其他域名或直接用IP访问，只允许指定的域名
+		#forbid illegal domain
+		if ( $host != "letsthink.top" ) {
+			return 403; 
+		}
 
 		# 网站路由​
 		location / {
