--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
-load_module /etc/nginx/soruceCode/nginx-1.18.0/objs/ngx_http_google_filter_module.so;
+#load_module /etc/nginx/soruceCode/nginx-1.18.0/objs/ngx_http_google_filter_module.so;
 
 events {
 	worker_connections 768;
@@ -72,54 +72,54 @@ http {
 		return 301 https://$host$request_uri;
 	}
 
-	server {
-		listen 443 ssl http2;
-		listen [::]:443 ssl http2;
-		server_name www.search.letsthink.top search.letsthink.top;
+	# server {
+	# 	listen 443 ssl http2;
+	# 	listen [::]:443 ssl http2;
+	# 	server_name www.search.letsthink.top search.letsthink.top;
 
-		ssl_certificate /home/yahaha/think/ssl/search/search.letsthink.top_bundle.crt;  # 替换为SSL证书路径
-		ssl_certificate_key /home/yahaha/think/ssl/search/search.letsthink.top.key;  # 替换为SSL证书私钥路径
+	# 	# ssl_certificate /home/ubuntu/letsthink/ssl/search/search.letsthink.top_bundle.crt;  # 替换为SSL证书路径
+	# 	# ssl_certificate_key /home/ubuntu/letsthink/ssl/search/search.letsthink.top.key;  # 替换为SSL证书私钥路径
 
-		ssl_session_timeout 10m;
-		#请按照以下协议配置
-		ssl_protocols TLSv1.2 TLSv1.3; 
-		#请按照以下套件配置，配置加密套件，写法遵循 openssl 标准。
-		ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE; 
-		ssl_prefer_server_ciphers on;
+	# 	ssl_session_timeout 10m;
+	# 	#请按照以下协议配置
+	# 	ssl_protocols TLSv1.2 TLSv1.3; 
+	# 	#请按照以下套件配置，配置加密套件，写法遵循 openssl 标准。
+	# 	ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE; 
+	# 	ssl_prefer_server_ciphers on;
 
-		# logging
-		access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
-		error_log /var/log/nginx/error.log warn;
+	# 	# logging
+	# 	access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
+	# 	error_log /var/log/nginx/error.log warn;
 
 		
-		resolver 8.8.8.8;
+	# 	resolver 8.8.8.8;
 
-		# 防止网络爬虫
-		#forbid spider
-		if ($http_user_agent ~* "qihoobot|Baiduspider|Googlebot|Googlebot-Mobile|Googlebot-Image|Mediapartners-Google|Adsbot-Google|Feedfetcher-Google|Yahoo! Slurp|Yahoo! Slurp China|YoudaoBot|Sosospider|Sogou spider|Sogou web spider|MSNBot|ia_archiver|Tomato Bot") 
-		{ 
-			return 403; 
-		}
+	# 	# 防止网络爬虫
+	# 	#forbid spider
+	# 	if ($http_user_agent ~* "qihoobot|Baiduspider|Googlebot|Googlebot-Mobile|Googlebot-Image|Mediapartners-Google|Adsbot-Google|Feedfetcher-Google|Yahoo! Slurp|Yahoo! Slurp China|YoudaoBot|Sosospider|Sogou spider|Sogou web spider|MSNBot|ia_archiver|Tomato Bot") 
+	# 	{ 
+	# 		return 403; 
+	# 	}
 
-		# 禁止用其他域名或直接用IP访问，只允许指定的域名
-		#forbid illegal domain
-		if ( $host != "search.letsthink.top" ) {
-			return 403; 
-		}
+	# 	# 禁止用其他域名或直接用IP访问，只允许指定的域名
+	# 	#forbid illegal domain
+	# 	if ( $host != "search.letsthink.top" ) {
+	# 		return 403; 
+	# 	}
 
-		location / {						
-			google on;
-			google_scholar on;			
-		}
-	}
+	# 	# location / {						
+	# 	# 	google on;
+	# 	# 	google_scholar on;			
+	# 	# }
+	# }
 
 	server {
 		listen 443 ssl http2;
 		listen [::]:443 ssl http2;
 		server_name www.letsthink.top letsthink.top;
 
-		ssl_certificate /home/yahaha/think/ssl/letsthink.top_bundle.crt;  # 替换为SSL证书路径
-		ssl_certificate_key /home/yahaha/think/ssl/letsthink.top.key;  # 替换为SSL证书私钥路径
+		ssl_certificate /home/ubuntu/letsthink/ssl/letsthink.top_bundle.crt;  # 替换为SSL证书路径
+		ssl_certificate_key /home/ubuntu/letsthink/ssl/letsthink.top.key;  # 替换为SSL证书私钥路径
 
 		ssl_session_timeout 10m;
 		#请按照以下协议配置
@@ -132,7 +132,7 @@ http {
 		access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
 		error_log /var/log/nginx/error.log warn;
 
-		root /home/yahaha/think/frontend;   ## 网站编译好的文件地址
+		root /home/ubuntu/letsthink/frontend;   ## 网站编译好的文件地址
 
 		# 防止网络爬虫
 		#forbid spider
@@ -149,7 +149,7 @@ http {
 
 		# 网站路由​
 		location / {
-			alias /home/yahaha/think/frontend/;
+			alias /home/ubuntu/letsthink/frontend/;
 			try_files $uri $uri/ /index.html;
 		}
 
@@ -168,8 +168,8 @@ http {
 			proxy_set_header X-Real-IP $remote_addr;
         	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-			proxy_ssl_certificate /home/yahaha/think/ssl/letsthink.top_bundle.crt;
-			proxy_ssl_certificate_key /home/yahaha/think/ssl/letsthink.top.key;
+			proxy_ssl_certificate /home/ubuntu/letsthink/ssl/letsthink.top_bundle.crt;
+			proxy_ssl_certificate_key /home/ubuntu/letsthink/ssl/letsthink.top.key;
 			proxy_ssl_session_reuse on;
 			proxy_ssl_verify on;
 			proxy_ssl_verify_depth 2;
